outputs/tsp_constructive-constructive/ab-mcts-ahd/2025-09-24_14-22-01/evaluations/problem_eval-142926235730490425_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance factor (20%) based on both distance and connectivity, while prioritizing immediate distance (40%), potential return distance (20%), heuristic factor (10%), and node importance (10%).}
                                                                                                                                                                                                     ^
SyntaxError: unmatched '}'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance factor (20%) based on both distance and connectivity, while prioritizing immediate distance (40%), potential return distance (20%), heuristic factor (10%), and node importance (10%).}
                                                                                                                                                                                                     ^
SyntaxError: unmatched '}'
